# socha-client-rust-2024

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
resources/test/example-game/: 01.state.xml  03.state.xml  05.moves.xml  06.moves.xml  06.state.xml  07.moves.xml  07.state.xml  09.moves.xml  11.state.xml  12.state.xml  16.state.xml  22.moves.xml  23.moves.xml  27.state.xml  38.moves.xml  42.moves.xml  44.state.xml  (+1 more)
src/: client.rs  lib.rs  logic.rs  main.rs
src/game/: action.rs  board.rs  constants.rs  cube_dir.rs  cube_vec.rs  dir.rs  field.rs  mod.rs  move.rs  segment.rs  ship.rs  state.rs  team.rs  vec.rs  vec2.rs
src/protocol/: event.rs  event_payload.rs  game_result.rs  mod.rs  player.rs  request.rs  request_payload.rs  score.rs  score_aggregation.rs  score_cause.rs  score_definition.rs  score_definition_fragment.rs
src/util/: assert.rs  convert.rs  error.rs  macros.rs  mod.rs  perform.rs  result.rs  unwrap.rs  vec2.rs  xml.rs
test-resources/example-game/: 00.moves.xml  00.state.xml  01.moves.xml  02.moves.xml  02.state.xml  03.moves.xml  04.moves.xml  04.state.xml  05.state.xml  08.moves.xml  08.state.xml  09.state.xml  10.moves.xml  10.state.xml  11.moves.xml  12.moves.xml  13.moves.xml  13.state.xml  14.moves.xml  14.state.xml  15.moves.xml  15.state.xml  16.moves.xml  17.moves.xml  17.state.xml  18.moves.xml  18.state.xml  19.moves.xml  19.state.xml  20.moves.xml  20.state.xml  21.moves.xml  21.state.xml  22.state.xml  23.state.xml  25.moves.xml  25.state.xml  27.moves.xml  29.moves.xml  29.state.xml  (+18 more)
(+11 files in other folders)
